biliblili仿站缓慢继续

--- a/仿站/bilibili/index.html
+++ b/仿站/bilibili/index.html
@@ -499,7 +499,16 @@
                             个在线直播
                         </p>
                         <a href="">233秒居然能做这些！</a>
-                        div.
+                        <div class="btn-more">
+                            <span>更多</span>
+                            <i class="icon icon_right"></i>
+                        </div>
+                        <div class="read-push">
+                            <i class="icon icon_read"></i>
+                            <span class="read_info">
+                                <b>55120</b>条新动态
+                            </span>                               
+                        </div>
                     </div>                    
                 </div>
                 <div class="live-r">
@@ -510,33 +519,77 @@
                     </div>
                     <div class="carousel-tab-live clearfix">
                         <div class="tab-box">
-                            
-                        </div>
-                        <div class="tab-box">
-                            <ul class="">
+                            <ul>
                                 <li>
-                                    <a data-title=" bilibili 有文画上线啦~" href="http://h.bilibili.com/ywh/" target="_blank"><img src="images/live_banner_1.jpg" alt=""></a>
-                                </li>
-                                <li>
-                                    <a data-title="漫星少女-神起的声音" href="http://live.bilibili.com/pages/1702/cv#/" target="_blank"><img src="images/live_banner_2.jpg" alt=""></a>
-                                </li>
-                                <li>
-                                    <a data-title="中考高考的小伙伴们加油！" href="http://www.bilibili.com/blackboard/vc-graduate-pc.html" target="_blank"><img src="images/live_banner_3.jpg" alt=""></a>
+                                    <i class="number"></i>
+                                    <a href="">
+                                        <span></span>
+                                        <p>
+                                            <span class="u-name">小米公司</span>
+                                            <span class="up-online">
+                                                <i></i>
+                                                <em>2.4万</em>
+                                            </span>
+                                        </p>
+                                    </a>
                                 </li>
                             </ul>
-                            <div class="cbm-title-box">
-                                <a href="#">
-                                    <p>bilibili 有文画上线啦!</p>
-                                </a>
-                                <ul class="cbm-btn">
-                                    <li class="active"></li>
-                                    <li></li>
-                                    <li></li>
-                                </ul>
-                            </div>                            
                         </div>
                         <div class="tab-box">
-                            
+                            <div class="load-state">
+                                <span class="empty">没有数据(-_-#)</span>
+                            </div>
+                        </div>
+                        <div class="tab-box">
+                            <div class="carousel-min-box">
+                                <ul class="carousel-min">
+                                    <li>
+                                        <a data-title=" bilibili 有文画上线啦~" href="http://h.bilibili.com/ywh/" target="_blank"><img src="images/live_banner_1.jpg" alt=""></a>
+                                    </li>
+                                    <li>
+                                        <a data-title="漫星少女-神起的声音" href="http://live.bilibili.com/pages/1702/cv#/" target="_blank"><img src="images/live_banner_2.jpg" alt=""></a>
+                                    </li>
+                                    <li>
+                                        <a data-title="中考高考的小伙伴们加油！" href="http://www.bilibili.com/blackboard/vc-graduate-pc.html" target="_blank"><img src="images/live_banner_3.jpg" alt=""></a>
+                                    </li>
+                                </ul>
+                                <div class="cbm-title-box">
+                                    <a href="#">
+                                        <p>bilibili 有文画上线啦!</p>
+                                    </a>
+                                    <ul class="cbm-btn">
+                                        <li class="active"></li>
+                                        <li></li>
+                                        <li></li>
+                                    </ul>
+                                </div>        
+                            </div>
+                            <ul class="up-recommend">
+                                <li>
+                                    <a href="">
+                                        <img src="" alt="">
+                                        <span>鱼仔仔仔、</span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="">
+                                        <img src="" alt="">
+                                        <span>红发杰克、</span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="">
+                                        <img src="" alt="">
+                                        <span>拉拉是个大话痨</span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="">
+                                        <img src="" alt="">
+                                        <span>红沙雪</span>
+                                    </a>
+                                </li>
+                            </ul>                    
                         </div>
                     </div>
                 </div>
