--- a/works/index.html
+++ b/works/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
     <head>
+    <title>我的项目</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="css/normalize.css" />
         <link rel="stylesheet" href="css/style.css" />
