--- a/仿站/bilibili/index.html
+++ b/仿站/bilibili/index.html
@@ -26,7 +26,7 @@
         <div class="header-nav">
             <div class="header-nav-content-wp"></div>
             <div class="header-nav-content-msk"></div>
-            <div class="header-nav-content">
+            <div class="header-nav-content clearfix">
                 <ul class="h-nav-menu">
                     <li class="home"><a href="#"><span>主站</span></a></li>
                     <li><a href="#">画友</a></li>
