--- a/css3/loading.html
+++ b/css3/loading.html
@@ -60,7 +60,25 @@
         }
 
         .loading_2 {
-            
+            position: absolute;
+            top: 30%;
+            left: 50%;
+            margin-left: -65px;
+            width: 100px;
+            height: 100px;
+            border: 15px solid rgba(255,255,255, .3);
+            border-top: 15px solid #fff;
+            border-radius: 50%;
+            animation: load infinite 1s linear;
+        }
+
+        @keyframes load {
+            from {
+                transform: rotate(0);
+            }
+            to {
+                transform: rotate(360deg);
+            }
         }
     </style>
 </head>
