修改实例展示页手机端效果

--- a/jQuery实例效果集合/works/index.html
+++ b/jQuery实例效果集合/works/index.html
@@ -3,6 +3,7 @@
     <head>
     <title>jQuery效果实例集合</title>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/normalize.css" />
         <link rel="stylesheet" href="css/style.css" />
     </head>
@@ -12,7 +13,7 @@
                 <h1>jQuery效果实例集合</h1>
                 <p>请葬我以花，咏我以歌，送我以诗，赞我以爱。</p>                
             </div>
-            <ul class="main">
+            <ul class="main clearfix">
                 <li>
                     <a href="../tab-demo/index.html" class="btn demo-title" target="_blank">tab组件</a>
                     <div class="img-box">
