--- a/resume/index.html
+++ b/resume/index.html
@@ -12,64 +12,68 @@
 		<div class="aside">
 		    <div class="header">
 		    	<h1>RESUME</h1>
-			    <img src="./images/saber.jpg">
-			    <h2>萧雪圣</h2>
-			    <p>求职意向：前端工程师</p>
+			    <img src="./images/hicon.jpg">
+			    <h2>赖文斌</h2>
+			    <p>求职意向：web 前端开发</p>
 		    </div>
 			<div class="content">
 				<div class="information">
 					<div class="adorn"><h2 class="iconfontyyy icon-xinxi">基本信息</h2></div>
-					<span>出生日期：</span><span>1995-08-06</span>
-					<span>籍 贯：</span><span>广东韶关曲江区</span>
-					<span>民 族：</span><span>汉族</span>
-					<span>政治面貌：</span><span>团员</span>
+					<span class="xinxi-title">学历：</span><span>大专</span>
+					<span class="xinxi-title">年龄：</span><span>22</span>
+					<span class="xinxi-title">专业：</span><span>计算机应用技术</span>
+					<span class="xinxi-title">Github: </span><span>https://github.com/XSnowHoly</span>
 				</div>
 				<div class="contact">
 					<div class="adorn"><h2 class="iconfontyyy icon-contact">联系方式</h2></div>
 					<span class="iconfontyyy icon-phone">13250281210</span>
 					<span class="iconfontyyy icon-youxiang">495904127@qq.com</span>
 					<span class="iconfontyyy icon-weixin-copy">SkyBin666</span>
-					<span class="iconfontyyy icon-address">广州市南沙区万达广场B6栋</span>
+					<span class="iconfontyyy icon-address">广州市南沙区</span>
 				</div>
 				<div class="hobby clearfix">
-					<div class="adorn"><h2 class="iconfontyyy icon-techangaihao">兴趣爱好</h2></div>
+					<div class="adorn"><h2 class="iconfontyyy icon-techangaihao">主修课程</h2></div>
 					<ul>
-						<li class="iconfontyyy icon-jianshen">健身</li>
-						<li class="iconfontyyy icon-pingpangqiushi">乒乓球</li>
-						<li class="iconfontyyy icon-yinle">音乐</li>
-						<li class="iconfontyyy icon-huihua">绘画</li>
+						<li>C语言</li>
+						<li>PS图像处理</li>
+						<li>MySql数据库</li>
+						<li>PHP程序设计</li>
 					</ul>
 				</div>
 			</div>
 		</div>
         <div class="main">
-        	<div class="edu">
-        		<h3 class="iconfontyyy icon-xueli">教育经历</h3>
-        		<h4>计算机应用专业</h4>
-        		<h4>广州南洋理工职业学院</h4>
-        		<span>2014-2017</span>
-        		<span>主修课程：C语言程序设计,PS图形图像处理,HTML5+CSS3+JavaScript网页设计,DW网页设计,FLASH动画制作,PHP程序设计,计算机网络基础Linux网络操作系统,ASP.NET软件开发,AI图像处理。</span>
-        	</div>
+            <div class="self-assessment">
+                <h3 class="iconfontyyy icon-evaluate">自我评价</h3>
+                <p>乐观开朗，积极向上。学习能力强，喜欢挑战，喜欢接受新事物，具有责任心，和团队
+意识，具有良好的沟通能力。热爱前端。</p>
+            </div>
         	<div class="work">
         		<h3 class="iconfontyyy icon-gongzuo">工作经验</h3>
-        		<h4>电脑维修员</h4>
-        		<h4>广州南洋理工职业学院维修部</h4>
-        		<span>2015-03~2015-06</span>
-        		<span>处理维修部各种电脑故障问题，安装电脑系统。</span>
-        		<h4>电话客服</h4>
-        		<h4>韶关市坪石镇移动分公司</h4>
-        		<span>2015-07~2015-08</span>
-        		<span>客户资料整理，协调沟通，维护客户关系。</span>
-
+        		<h4>图像后期处理</h4>
+        		<h4>广州东方红创意园合社摄影</h4>
+        		<span>2016-12~2017-02</span>
+        		<span>摄影工作室图片后期处理，美化加工</span>
+        		<h4>前端开发</h4>
+        		<h4>广州铭扬影视传媒公司</h4>
+        		<span>2017-03~至今</span>
+        		<span>公司官网开发和维护</span>
         	</div>
         	<div class="skill">
         		<h3 class="iconfontyyy icon-jineng">职业技能</h3>
-        		<p>熟练使用PS，FLASH , DW , AI 等图像处理及网页制作软件。有一定的PHP编程基础.。制作网站前端，开发后台。做过一个简单的商城项目，以及一个商城前端静态页面。具有一定的电脑组装及维护技能。</p>
-        	</div>
-        	<div class="self-assessment">
-        		<h3 class="iconfontyyy icon-evaluate">自我评价</h3>
-        		<p>工作认真负责，积极主动，能吃苦耐劳。较强的适应能力和自学能力，较强的管理、组织能力。思维敏捷，较强的动手实践能力和团体协作精神。掌握交际、组织、管理、电脑、分析研究等技能。</p>
-        	</div>
+                <h4>HTML&CSS</h4>
+        		<p>
+遵循 W3C 规范，写出规范化、语义化的代码，熟悉圣杯布局和双飞翼等常见布局。熟悉
+CSS3，熟悉盒模型、浮动，定位，BFC 等概念。了解响应式和 flex 布局</p>
+                <h4>JavaScript&jQuery</h4>
+                <p>熟悉原生 JS 和 jQuery,利用 JS 和 jQery 实现常见效果，能够不依赖库手写 tab 切换、轮播、
+瀑布流布局、懒加载 等效果。掌握事件模型、DOM 操作、ajax、jsonp、闭包、
+原型链、面向对象、封装等知识</p>
+                <h4>框架&工具</h4>
+                <p>熟练使用 sublime、Git、Node.js 命令行等开发工具。</p>
+                <p>熟悉 requirejs、gulp 等前端构建工具，打包代码和实现代码的模块化。</p>
+                <p>了解bootStrap 的基本用法。</p>
+        	</div>	
         </div>
 	</div>
 </body>
