--- a/resume/index.html
+++ b/resume/index.html
@@ -22,7 +22,9 @@
 					<span class="xinxi-title">学历：</span><span>大专</span>
 					<span class="xinxi-title">年龄：</span><span>22</span>
 					<span class="xinxi-title">专业：</span><span>计算机应用技术</span>
-					<span class="xinxi-title">Github: </span><span>https://github.com/XSnowHoly</span>
+					<span class="xinxi-title">Github: </span><span>
+                    <a href="https://github.com/XSnowHoly" target="_blank">https://github.com/XSnowHoly</a>
+                    </span>
 				</div>
 				<div class="contact">
 					<div class="adorn"><h2 class="iconfontyyy icon-contact">联系方式</h2></div>
@@ -36,8 +38,12 @@
 					<ul>
 						<li>C语言</li>
 						<li>PS图像处理</li>
+                        <li>HTML + CSS</li>
+                        <li>JavaScript</li>
+                        <li>计算机网络基础</li>
 						<li>MySql数据库</li>
 						<li>PHP程序设计</li>
+                        <li>Linux操作系统</li>
 					</ul>
 				</div>
 			</div>
@@ -74,6 +80,18 @@ CSS3，熟悉盒模型、浮动，定位，BFC 等概念。了解响应式和 fl
                 <p>熟悉 requirejs、gulp 等前端构建工具，打包代码和实现代码的模块化。</p>
                 <p>了解bootStrap 的基本用法。</p>
         	</div>	
+            <div class="demo">
+                <h3 class="iconfontyyy icon-xiangmu">项目作品</h3>
+                <h4>一个漫画作品介绍网站</h4>
+                <p>使用技术：HTML5、CSS3、jQuery、requireJs、媒体查询</p>
+                <p>地址: <a href="https://xsnowholy.github.io/jirengu/jojo/" target="_blank">https://xsnowholy.github.io/jirengu/jojo/</a></p>
+                <h4>一个商城首页</h4>
+                <p>使用技术：HTML5、CSS3、jQuery</p>
+                <p>地址: <a href="https://xsnowholy.github.io/jirengu/雷姆首页" target="_blank">https://xsnowholy.github.io/jirengu/雷姆首页</a></p>
+                <h4>一些jQuery效果实例</h4>
+                <p>使用技术：HTML5、CSS3动画效果、jQuery 、媒体查询</p>
+                <p>地址: <a href="https://xsnowholy.github.io/jirengu/jQuery实例效果集合/works" target="_blank">https://xsnowholy.github.io/jirengu/jQuery实例效果集合/works</a></p>
+            </div>
         </div>
 	</div>
 </body>
