解决雷姆首页的轮播js兼容问题

--- a/雷姆首页/index.html
+++ b/雷姆首页/index.html
@@ -371,7 +371,10 @@
             play(($slidesNum+$index-1) % $slidesNum);
         }
 
-        function play($idx=0) {
+        function play($idx) {
+        	if (!$idx) {
+        		$idx = 0;
+        	}
             if(!$lock) return;
             $lock = false;
             $slidesLi.eq($index).fadeOut(500);
