--- a/雷姆首页/index.html
+++ b/雷姆首页/index.html
@@ -4,20 +4,7 @@
 <meta charset='UTF-8'>
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 	<title>雷姆REMCL-互联网快时尚品牌,服装,鞋,配饰,网上购物货到付款网站,7天无条件退换货</title>
-<script src="js/slide.js" type="text/javascript"></script>
 <link rel="stylesheet" type="text/css" href="css/style.css">
-<script type="text/javascript" src="js/jquery.js"></script>
-<script type="text/javascript">
-// 导航条弹出效果
-	$(document).ready(function(){
-		$('.right_menu').hover(function(){
-
-		$(this).children('ul').toggle();	
-		});
-		
-	});
-// 导航条弹出效果结束			
-</script>
 </head>
 <body>
 	<!-- 顶部广告条 -->
@@ -46,13 +33,13 @@
 	 			<ul class="right">
 	 				<div id="menu">
 		 				<li class="right_menu"><a href="" class="one">我的雷姆</a>
-		 					<ul class="one_a">
+		 					<ul class="children_menu">
 		 						<li><a href="">我的订单</a></li>
 		 						<li><a href="">我的收藏</a></li>
 		 					</ul>
 		 				</li>
 		 				<li class="right_menu"><a href="" class="one">帮助中心</a>
-		 					<ul class="one_b">
+		 					<ul class="children_menu">
 		 						<li><a href="">购物指南</a></li>
 		 						<li><a href="">配送方式</a></li>
 		 						<li><a href="">支付方式</a></li>
@@ -62,7 +49,7 @@
 		 					</ul>
 		 				</li>
 		 				<li class="right_menu"><a href="" class="one">网站公告</a>
-		 					<ul class="one_c">
+		 					<ul class="children_menu">
 		 						<li><a href="">网站公告</a></li>
 		 						<li><a href="">重要提示</a></li>
 		 					</ul>
@@ -333,73 +320,7 @@
 		</div>
 	</div>
 	<!-- 尾部区域结束 -->
-	    <script>
-        ///////自定义变量/////////
-        var $carouselBox = $('.carousel'),
-            $slidesUl = $('.slides-img'),               
-            $slidesLi = $('.slides-img > li'),
-            $prev = $('.btn.prev'),
-            $next = $('.btn.next'),
-            $shullingBtn = $('.shulling-btn > li');
-            $slidesNum = $slidesLi.length;
-            $index = 0;
-            $lock = true;
-
-        $carouselBox.on('mouseenter', stopTime);    // 鼠标移动到图片上轮播停止
-        $carouselBox.on('mouseleave', auto);        // 鼠标移开后开始轮播    
-
-        $next.on('click', function(e) {
-            e.preventDefault();
-            next();
-        })
-        $prev.on('click', function(e) {
-            e.preventDefault();
-            prev();
-        })
-
-        $shullingBtn.on('click', function() {
-            play($(this).index());
-        });
-        auto();
-        play();
-
-        function next() {
-            play(($index+1) % $slidesNum);
-        }
-
-        function prev() {
-            play(($slidesNum+$index-1) % $slidesNum);
-        }
-
-        function play($idx) {
-        	if (!$idx) {
-        		$idx = 0;
-        	}
-            if(!$lock) return;
-            $lock = false;
-            $slidesLi.eq($index).fadeOut(500);
-            $slidesLi.eq($idx).fadeIn(500, function() {
-                $lock = true;
-            })
-            $index = $idx;
-            setShullingBtn();
-        }
-
-        // 自动轮播
-        function auto() {
-            check = setInterval(next, 3500);
-            
-        }
-        // 停止自动轮播
-        function stopTime() {
-            clearInterval(check);
-        }
-
-        function setShullingBtn() {
-            $shullingBtn.removeClass('active')
-                        .eq($index)
-                        .addClass('active');
-        }
-    </script>
+	<script type="text/javascript" src="js/jquery.js"></script>
+	<script src="js/carousel.js"></script>
 </body>
 </html>
