测试简历字体

--- a/resume/index.html
+++ b/resume/index.html
@@ -5,7 +5,7 @@
 	<title>my-resume</title>
 	<link rel="stylesheet"  href="./css/normalize.css">
 	<link rel="stylesheet"  href="./css/iconfont.css">
-	<link rel="stylesheet"  href="./css/style_b.css">
+	<link rel="stylesheet"  href="./css/style_c.css">
 </head>
 <body>
 	<div class="layout clearfix">
