修改简历字体BUG

--- a/resume/index.html
+++ b/resume/index.html
@@ -35,7 +35,7 @@
 				</div>
 				<div class="hobby clearfix">
 					<div class="adorn"><h2 class="iconfontyyy icon-techangaihao">主修课程</h2></div>
-					<ul>
+					<ul class="course clearfix">
 						<li>C语言</li>
 						<li>PS图像处理</li>
                         <li>HTML + CSS</li>
@@ -51,8 +51,8 @@
         <div class="main">
             <div class="self-assessment">
                 <h3 class="iconfontyyy icon-evaluate">自我评价</h3>
-                <p>乐观开朗，积极向上。学习能力强，喜欢挑战，喜欢接受新事物，具有责任心，和团队
-意识，具有良好的沟通能力。热爱前端。</p>
+                <span>乐观开朗，积极向上。学习能力强，喜欢挑战，喜欢接受新事物，具有责任心，和团队
+意识，具有良好的沟通能力。热爱前端。</span>
             </div>
         	<div class="work">
         		<h3 class="iconfontyyy icon-gongzuo">工作经验</h3>
@@ -68,29 +68,29 @@
         	<div class="skill">
         		<h3 class="iconfontyyy icon-jineng">职业技能</h3>
                 <h4>HTML&CSS</h4>
-        		<p>
+        		<span>
 遵循 W3C 规范，写出规范化、语义化的代码，熟悉圣杯布局和双飞翼等常见布局。熟悉
-CSS3，熟悉盒模型、浮动，定位，BFC 等概念。了解响应式和 flex 布局</p>
+CSS3，熟悉盒模型、浮动，定位，BFC 等概念。了解响应式和 flex 布局</span>
                 <h4>JavaScript&jQuery</h4>
-                <p>熟悉原生 JS 和 jQuery,利用 JS 和 jQery 实现常见效果，能够不依赖库手写 tab 切换、轮播、
+                <span>熟悉原生 JS 和 jQuery,利用 JS 和 jQery 实现常见效果，能够不依赖库手写 tab 切换、轮播、
 瀑布流布局、懒加载 等效果。掌握事件模型、DOM 操作、ajax、jsonp、闭包、
-原型链、面向对象、封装等知识</p>
+原型链、面向对象、封装等知识</span>
                 <h4>框架&工具</h4>
-                <p>熟练使用 sublime、Git、Node.js 命令行等开发工具。</p>
-                <p>熟悉 requirejs、gulp 等前端构建工具，打包代码和实现代码的模块化。</p>
-                <p>了解bootStrap 的基本用法。</p>
+                <span>熟练使用 sublime、Git、Node.js 命令行等开发工具。</span>
+                <span>熟悉 requirejs、gulp 等前端构建工具，打包代码和实现代码的模块化。</span>
+                <span>了解bootStrap 的基本用法。</span>
         	</div>	
             <div class="demo">
                 <h3 class="iconfontyyy icon-xiangmu">项目作品</h3>
                 <h4>一个漫画作品介绍网站</h4>
-                <p>使用技术：HTML5、CSS3、jQuery、requireJs、媒体查询</p>
-                <p>地址: <a href="https://xsnowholy.github.io/jirengu/jojo/" target="_blank">https://xsnowholy.github.io/jirengu/jojo/</a></p>
+                <span>使用技术：HTML5、CSS3、jQuery、requireJs、媒体查询</span>
+                <span>地址: <a href="https://xsnowholy.github.io/jirengu/jojo/" target="_blank">https://xsnowholy.github.io/jirengu/jojo/</a></span>
                 <h4>一个商城首页</h4>
-                <p>使用技术：HTML5、CSS3、jQuery</p>
-                <p>地址: <a href="https://xsnowholy.github.io/jirengu/雷姆首页" target="_blank">https://xsnowholy.github.io/jirengu/雷姆首页</a></p>
+                <span>使用技术：HTML5、CSS3、jQuery</span>
+                <span>地址: <a href="https://xsnowholy.github.io/jirengu/雷姆首页" target="_blank">https://xsnowholy.github.io/jirengu/雷姆首页</a></span>
                 <h4>一些jQuery效果实例</h4>
-                <p>使用技术：HTML5、CSS3动画效果、jQuery 、媒体查询</p>
-                <p>地址: <a href="https://xsnowholy.github.io/jirengu/jQuery实例效果集合/works" target="_blank">https://xsnowholy.github.io/jirengu/jQuery实例效果集合/works</a></p>
+                <span>使用技术：HTML5、CSS3动画效果、jQuery 、媒体查询</span>
+                <span>地址: <a href="https://xsnowholy.github.io/jirengu/jQuery实例效果集合/works" target="_blank">https://xsnowholy.github.io/jirengu/jQuery实例效果集合/works</a></span>
             </div>
         </div>
 	</div>
