--- a/resume/index.html
+++ b/resume/index.html
@@ -69,12 +69,11 @@
         		<h3 class="iconfontyyy icon-jineng">职业技能</h3>
                 <h4>HTML&CSS</h4>
         		<span>
-遵循 W3C 规范，写出规范化、语义化的代码，熟悉圣杯布局和双飞翼等常见布局。熟悉
-CSS3，熟悉盒模型、浮动，定位，BFC 等概念。了解响应式和 flex 布局</span>
+遵循 W3C 规范，写出规范化、语义化的代码，熟悉掌握<strong>HTML(5)</strong>和常用<strong>CSS(3)</strong>,具有像素还原设计稿能力。，熟悉盒模型、浮动，定位，BFC 等概念。了解响应式和 flex 布局</span>
                 <h4>JavaScript&jQuery</h4>
                 <span>熟悉原生 JS 和 jQuery,利用 JS 和 jQery 实现常见效果，能够不依赖库手写 tab 切换、轮播、
-瀑布流布局、懒加载 等效果。掌握事件模型、DOM 操作、ajax、jsonp、闭包、
-原型链、面向对象、封装等知识</span>
+瀑布流布局、懒加载 等效果。掌握<strong>事件模型、DOM 操作、ajax、jsonp、闭包、
+原型链、面向对象、封装</strong>等知识</span>
                 <h4>框架&工具</h4>
                 <span>熟练使用 sublime、Git、Node.js 命令行等开发工具。</span>
                 <span>熟悉 requirejs、gulp 等前端构建工具，打包代码和实现代码的模块化。</span>
