--- a/resume/index.html
+++ b/resume/index.html
@@ -69,7 +69,7 @@
         		<h3 class="iconfontyyy icon-jineng">职业技能</h3>
                 <h4>HTML&CSS</h4>
         		<span>
-遵循 W3C 规范，写出规范化、语义化的代码，熟悉掌握<strong>HTML(5)</strong>和常用<strong>CSS(3)</strong>,具有像素还原设计稿能力。，熟悉 <strong>盒模型、浮动，定位，BFC</strong> 等概念。了解<strong>响应式</strong>和 <strong>flex</strong> 布局</span>
+遵循 W3C 规范，写出规范化、语义化的代码，熟悉掌握<strong>HTML(5)</strong>和常用<strong>CSS(3)</strong>,具有像素还原设计稿能力。熟悉 <strong>盒模型、浮动，定位，BFC</strong> 等概念。熟悉<strong>响应式</strong>和 <strong>flex</strong> 布局</span>
                 <h4>JavaScript&jQuery</h4>
                 <span>熟悉原生 JS 和 jQuery,利用 JS 和 jQery 实现常见效果，能够不依赖库手写 tab 切换、轮播、
 瀑布流布局、懒加载 等效果。掌握<strong>事件模型、DOM 操作、ajax、jsonp、闭包、
