简历项目地址小改动

--- a/resume/index.html
+++ b/resume/index.html
@@ -90,7 +90,7 @@
                 <span>地址: <a href="https://xsnowholy.github.io/jirengu/雷姆首页" target="_blank">https://xsnowholy.github.io/jirengu/雷姆首页</a></span>
                 <h4>一些jQuery效果实例</h4>
                 <span>使用技术：HTML5、CSS3动画效果、jQuery 、媒体查询</span>
-                <span>地址: <a href="https://xsnowholy.github.io/jirengu/jQuery实例效果集合/works" target="_blank">https://xsnowholy.github.io/jirengu/jQuery实例效果集合/works</a></span>
+                <span>地址: <a href="https://xsnowholy.github.io/jirengu/jQuery-showreel" target="_blank">https://xsnowholy.github.io/jirengu/jQuery-showreel</a></span>
             </div>
         </div>
 	</div>
