--- a/resume/index.html
+++ b/resume/index.html
@@ -56,14 +56,10 @@
             </div>
         	<div class="work">
         		<h3 class="iconfontyyy icon-gongzuo">工作经验</h3>
-        		<h4>图像后期处理</h4>
-        		<h4>广州东方红创意园合社摄影</h4>
-        		<span>2016-12~2017-02</span>
-        		<span>摄影工作室图片后期处理，美化加工</span>
         		<h4>前端开发</h4>
         		<h4>广州铭扬影视传媒公司</h4>
-        		<span>2017-03~至今</span>
-        		<span>公司官网开发和维护</span>
+        		<span>2016-11~2017-06</span>
+        		<span>公司官网前端开发和后台维护</span>
         	</div>
         	<div class="skill">
         		<h3 class="iconfontyyy icon-jineng">职业技能</h3>
