--- a/仿站/ronyon/index.html
+++ b/仿站/ronyon/index.html
@@ -14,7 +14,7 @@
             <div class="container">
                 <div class="navbar-header">
                     <a href="navbar-brand" href="#">
-                        <img src="images/logo.png" alt="ronyon">
+                    <img src="images/logo.png" alt="ronyon">
                     </a>
                 </div>
                 <div class="collapse navbar-collapse navbar-right">
@@ -28,48 +28,43 @@
                     </ul>
                     <div class="phonetitle navbar-left">
                         <a href="tel:13378466580">13378466580</a>
-                    </div> 
-                </div>          
+                    </div>
+                </div>
             </div>
         </nav>
         <div id="myCarousel" class="carousel slide" data-ride="carousel">
-        <!-- 轮播（Carousel）指标 -->
-        <ol class="carousel-indicators">
-            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-            <li data-target="#myCarousel" data-slide-to="1"></li>
-            <li data-target="#myCarousel" data-slide-to="2"></li>
-        </ol>   
-        <!-- 轮播（Carousel）项目 -->
-        <div class="carousel-inner">
-            <div class="item active">
-                <img src="images/indexbanner-bg01.jpg" alt="First slide">
-                <div class="carousel-caption">
-                    <img src="images/banner-text01.png"  alt="">
+            <!-- 轮播（Carousel）指标 -->
+            <ol class="carousel-indicators">
+                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                <li data-target="#myCarousel" data-slide-to="1"></li>
+                <li data-target="#myCarousel" data-slide-to="2"></li>
+            </ol>
+            <!-- 轮播（Carousel）项目 -->
+            <div class="carousel-inner">
+                <div class="item active">
+                    <img src="images/indexbanner-bg01.jpg" alt="First slide">
+                    <div class="carousel-caption">
+                        <img src="images/banner-text01.png"  alt="">
+                    </div>
                 </div>
-            </div>
-            <div class="item">
-                <img src="images/indexbanner-bg02.jpg" alt="Second slide">
-                <div class="carousel-caption">
-                    <img src="images/banner-text01.png" alt="">
+                <div class="item">
+                    <img src="images/indexbanner-bg02.jpg" alt="Second slide">
+                    <div class="carousel-caption">
+                        <img src="images/banner-text01.png" alt="">
+                    </div>
                 </div>
-            </div>
-            <div class="item">
-                <img src="images/indexbanner-bg03.jpg" alt="Third slide">
-                <div class="carousel-caption">
-                    <img src="images/banner-text01.png" alt="">
+                <div class="item">
+                    <img src="images/indexbanner-bg03.jpg" alt="Third slide">
+                    <div class="carousel-caption">
+                        <img src="images/banner-text01.png" alt="">
+                    </div>
                 </div>
             </div>
         </div>
-        <!-- 轮播（Carousel）导航 -->
-       <!--  <a class="carousel-control left" href="#myCarousel" 
-           data-slide="prev">&lsaquo;</a>
-        <a class="carousel-control right" href="#myCarousel" 
-           data-slide="next">&rsaquo;</a> -->
-        </div> 
         <div class="container">
             <h3 class="title">
-                <p class="text-center">我们的服务</p>
-                <img src="images/bt01.png" alt="">
+            <p class="text-center">我们的服务</p>
+            <img src="images/bt01.png" alt="">
             </h3>
             <div class="row wecan">
                 <div class="col-sm-2 col-xs-6"><img src="images/candoicon01.png" alt=""></div>
@@ -81,24 +76,30 @@
         </div>
         <div class="container ct-product">
             <h3 class="title">
-                <p class="text-center">我们的产品</p>
-                <img src="images/bt02.png" alt="">
+            <p class="text-center">我们的产品</p>
+            <img src="images/bt02.png" alt="">
             </h3>
             <div class="row productbox">
                 <div class="col-xs-6 col-md-3">
                     <div class="product-img">
-                        
                         <img src="images/ec8.jpg" alt="">
-                        <div class="warp"></div>
+                        <div class="warp">
+                            <i></i>
+                            <a class="warp-link" href="#"></a>
+                        </div>
                     </div>
                     <div class="caption">
                         <h5 class="text-center">生鲜电商系统</h5>
                     </div>
-                </div> 
+                </div>
                 <div class="col-xs-6 col-md-3">
                     <div class="product-img">
                         <img src="images/ec18.jpg" alt="">
                         <div class="warp"></div>
+                        <div class="warp">
+                            <i></i>
+                            <a class="warp-link" href="#"></a>
+                        </div>
                     </div>
                     <div class="caption">
                         <h5 class="text-center">服装电商系统</h5>
@@ -108,6 +109,10 @@
                     <div class="product-img">
                         <img src="images/ec4.jpg" alt="">
                         <div class="warp"></div>
+                        <div class="warp">
+                            <i></i>
+                            <a class="warp-link" href="#"></a>
+                        </div>
                     </div>
                     <div class="caption">
                         <h5 class="text-center">移动应用OA</h5>
@@ -117,6 +122,10 @@
                     <div class="product-img">
                         <img src="images/ec5.jpg" alt="">
                         <div class="warp"></div>
+                        <div class="warp">
+                            <i></i>
+                            <a class="warp-link" href="#"></a>
+                        </div>
                     </div>
                     <div class="caption">
                         <h5 class="text-center">B2B商城</h5>
@@ -126,6 +135,10 @@
                     <div class="product-img">
                         <img src="images/ec6.jpg" alt="">
                         <div class="warp"></div>
+                        <div class="warp">
+                            <i></i>
+                            <a class="warp-link" href="#"></a>
+                        </div>
                     </div>
                     <div class="caption">
                         <h5 class="text-center">APP商城</h5>
@@ -135,6 +148,10 @@
                     <div class="product-img">
                         <img src="images/ec7.jpg" alt="">
                         <div class="warp"></div>
+                        <div class="warp">
+                            <i></i>
+                            <a class="warp-link" href="#"></a>
+                        </div>
                     </div>
                     <div class="caption">
                         <h5 class="text-center">B2B2C商城</h5>
@@ -144,6 +161,10 @@
                     <div class="product-img">
                         <img src="images/ec10.jpg" alt="">
                         <div class="warp"></div>
+                        <div class="warp">
+                            <i></i>
+                            <a class="warp-link" href="#"></a>
+                        </div>
                     </div>
                     <div class="caption">
                         <h5 class="text-center">B2C商城</h5>
@@ -153,6 +174,10 @@
                     <div class="product-img">
                         <img src="images/ec11.jpg" alt="">
                         <div class="warp"></div>
+                        <div class="warp">
+                            <i></i>
+                            <a class="warp-link" href="#"></a>
+                        </div>
                     </div>
                     <div class="caption">
                         <h5 class="text-center">微信订餐系统</h5>
@@ -163,8 +188,8 @@
         <div class="scheme">
             <div class="container">
                 <h3 class="title">
-                    <p class="text-center">解决方案</p>
-                    <img src="images/bt03.png" alt="">
+                <p class="text-center">解决方案</p>
+                <img src="images/bt03.png" alt="">
                 </h3>
                 <p class="text-center">专业团队，为你提供针对性、个性的企业互联网+解决方案</p>
                 <div class="row solution">
@@ -182,41 +207,77 @@
                     </div>
                     <div class="button">
                         <a class="btn btn-lg" role="button">查看更多</a>
-                    </div>                  
+                    </div>
                 </div>
             </div>
         </div>
         <div class="case">
             <div class="container">
-                 <h3 class="title">
-                    <p class="text-center">成功案例</p>
-                    <img src="images/bt04.png" alt="">
+                <h3 class="title">
+                <p class="text-center">成功案例</p>
+                <img src="images/bt04.png" alt="">
                 </h3>
                 <div class="row case-box">
                     <div class="col-xs-6 col-md-4">
-                        <img src="images/case01.jpg" alt="">
+                        <div class="case-img">
+                            <img src="images/case02.jpg" alt="">
+                            <div class="warp">
+                                <i></i>
+                                <a class="warp-link" href="#"></a>
+                            </div>
+                        </div>
                     </div>
                     <div class="col-xs-6 col-md-4">
-                        <img src="images/case02.jpg" alt="">
+                        <div class="case-img">
+                            <img src="images/case02.jpg" alt="">
+                            <div class="warp">
+                                <i></i>
+                                <a class="warp-link" href="#"></a>
+                            </div>
+                        </div>
                     </div>
                     <div class="col-xs-6 col-md-4">
-                        <img src="images/case03.jpg" alt="">
+                        <div class="case-img">
+                            <img src="images/case03.jpg" alt="">
+                            <div class="warp">
+                                <i></i>
+                                <a class="warp-link" href="#"></a>
+                            </div>
+                        </div>
                     </div>
                     <div class="col-xs-6 col-md-3">
-                        <img src="images/case04.jpg" alt="">
+                        <div class="case-img">
+                            <img src="images/case04.jpg" alt="">
+                            <div class="warp">
+                                <i></i>
+                                <a class="warp-link" href="#"></a>
+                            </div>
+                        </div>
                     </div>
                     <div class="col-xs-6 col-md-3">
-                        <img src="images/case05.jpg" alt="">
+                        <div class="case-img">
+                            <img src="images/case05.jpg" alt="">
+                            <div class="warp">
+                                <i></i>
+                                <a class="warp-link" href="#"></a>
+                            </div>
+                        </div>
                     </div>
                     <div class="col-xs-6 col-md-3">
-                        <img src="images/case06.jpg" alt="">
+                        <div class="case-img">
+                            <img src="images/case06.jpg" alt="">
+                            <div class="warp">
+                                <i></i>
+                                <a class="warp-link" href="#"></a>
+                            </div>
+                        </div>
                     </div>
                     <div class="col-xs-6 col-md-3 more">
                         <a href="#">
-                            <span class="more-main">
-                                <p class="text-center"><strong>...</strong></p>
-                                <p class="text-center">More</p>
-                            </span>
+                        <span class="more-main">
+                        <p class="text-center"><strong>...</strong></p>
+                        <p class="text-center">More</p>
+                        </span>
                         </a>
                     </div>
                 </div>
@@ -229,13 +290,13 @@
                         <h5><strong>友情链接</strong></h5>
                         <p><a href="">Opencart应用市场</a></p>
                         <p><a href="">Opencart云服务</a></p>
-                        <p><a href="">Opencart官方</a></p>         
+                        <p><a href="">Opencart官方</a></p>
                     </div>
                     <div class="col-xs-6 col-md-3">
                         <h5><strong>关于我们</strong></h5>
                         <p><a href="">公司介绍</a></p>
                         <p><a href="">联系我们</a></p>
-                        <p><a href="">关于我们</a></p>               
+                        <p><a href="">关于我们</a></p>
                     </div>
                     <div class="col-xs-6 col-md-3">
                         <h5><strong>联系我们</strong></h5>
@@ -254,8 +315,8 @@
                         </div>
                     </div>
                 </div>
-                <p class="text-center">Copyright © 2013-2020 广州融远信息科技有限公司 All rights reserved 粤ICP备14064850号</p>                
+                <p class="text-center">Copyright © 2013-2020 广州融远信息科技有限公司 All rights reserved 粤ICP备14064850号</p>
             </div>
-        </div>   
+        </div>
     </body>
 </html>
